--- a/src/index.html
+++ b/src/index.html
@@ -292,7 +292,236 @@
                         </div>
                     </div>
                 </section>
+                <hr />
+                <section class="bg-gray-100 px-5 py-5">
+                    <div class="container mx-auto grid gap-6 lg:grid-cols-12">
+                        <div class="rounded-lg bg-violet-600 p-8 lg:col-span-6">
+                            <div class="mb-7 flex items-center">
+                                <div
+                                    class="h-10 w-10 overflow-hidden rounded-full border-2"
+                                >
+                                    <img
+                                        src="./assets/images/avatar.jpg"
+                                        alt=""
+                                        class="h-full w-full object-cover"
+                                    />
+                                </div>
+                                <div class="ml-3">
+                                    <h3 class="text-white">Daniel Clifford</h3>
+                                    <p class="text-gray-400">
+                                        Verified Graduate
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="mb-7 text-white">
+                                <strong>
+                                    Lorem ipsum dolor sit, amet consectetur
+                                    adipisicing elit. Aliquam nemo ut
+                                    perferendis, expedita temporibus impedit
+                                    quis fugiat, esse, commodi atque dolores
+                                    dignissimos nam! Id sit a earum adipisci
+                                    fugit enim!
+                                </strong>
+                            </div>
+                            <div class="text-gray-400">
+                                <strong class="text-sm"
+                                    >Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit. Laudantium labore saepe
+                                    architecto, culpa optio deleniti doloremque
+                                    et, corporis omnis esse expedita veritatis
+                                    velit quo iure ducimus nesciunt quaerat
+                                    voluptatum? Aut quidem fugiat impedit, odit
+                                    ad doloremque in architecto mollitia
+                                    perferendis labore eaque numquam nostrum
+                                    ipsum aspernatur laudantium iusto porro?
+                                    Minima vel cum fuga numquam voluptatum dicta
+                                    voluptates laudantium. Quisquam hic optio
+                                    quae modi dolor rem quo.
+                                </strong>
+                            </div>
+                        </div>
+
+                        <div class="rounded-lg bg-gray-600 p-8 lg:col-span-3">
+                            <div class="mb-7 flex items-center">
+                                <div
+                                    class="h-10 w-10 overflow-hidden rounded-full border-2"
+                                >
+                                    <img
+                                        src="./assets/images/avatar.jpg"
+                                        alt=""
+                                        class="h-full w-full object-cover"
+                                    />
+                                </div>
+                                <div class="ml-3">
+                                    <h3 class="text-white">
+                                        Johnathan Walters
+                                    </h3>
+                                    <p class="text-gray-400">
+                                        Verified Graduate
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="mb-7 text-white">
+                                <strong>
+                                    Lorem ipsum dolor sit, amet consectetur
+                                    adipisicing elit. Aliquam nemo ut
+                                    perferendis, expedita temporibus impedit
+                                    quis fugiat
+                                </strong>
+                            </div>
+                            <div class="text-gray-400">
+                                <strong class="text-sm"
+                                    >Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit. Laudantium labore saepe
+                                    architecto, culpa optio deleniti doloremque
+                                    et, corporis omnis esse expedita veritatis
+                                    velit quo iure ducimus nesciunt quaerat
+                                    voluptatum? Aut quidem fugiat impedit, odit
+                                    ad doloremque in architecto mollitia
+                                    perferendis labore eaque numquam nostrum
+                                </strong>
+                            </div>
+                        </div>
+
+                        <div
+                            class="rounded-lg bg-white p-8 lg:col-span-3 lg:row-span-2"
+                        >
+                            <div class="mb-7 flex items-center">
+                                <div
+                                    class="h-10 w-10 overflow-hidden rounded-full border-2"
+                                >
+                                    <img
+                                        src="./assets/images/avatar.jpg"
+                                        alt=""
+                                        class="h-full w-full object-cover"
+                                    />
+                                </div>
+                                <div class="ml-3">
+                                    <h3 class="text-gray-700">Kira Whittle</h3>
+                                    <p class="text-gray-400">
+                                        Verified Graduate
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="mb-7 text-black">
+                                <strong>
+                                    Lorem ipsum dolor sit, amet consectetur
+                                    adipisicing elit. Aliquam nemo ut
+                                    perferendis, expedita
+                                </strong>
+                            </div>
+                            <div class="text-gray-400">
+                                <strong class="text-sm"
+                                    >Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit. Laudantium labore saepe
+                                    architecto, culpa optio deleniti doloremque
+                                    et, corporis omnis esse expedita veritatis
+                                    velit quo iure ducimus nesciunt quaerat
+                                    voluptatum? Aut quidem fugiat impedit, odit
+                                    ad doloremque in architecto mollitia
+                                    perferendis labore eaque numquam nostrum
+                                    ipsum aspernatur laudantium iusto porro?
+                                    Minima vel cum fuga numquam voluptatum dicta
+                                    voluptates laudantium. Quisquam hic optio
+                                    quae modi dolor rem quo. Lorem ipsum, dolor
+                                    sit amet consectetur adipisicing elit. Dicta
+                                    nesciunt iure quibusdam dolorem doloremque
+                                    aliquid corrupti minima, molestias eius
+                                    perspiciatis nihil neque accusamus impedit
+                                    error, a reprehenderit explicabo sint saepe
+                                    architecto modi tenetur veniam odio magni.
+                                    Optio odit magni voluptatum ducimus, nam
+                                    nesciunt numquam eveniet assumenda enim sit
+                                    nostrum ex vitae, quaerat quae. Eveniet
+                                    molestiae adipisci odit facilis odio
+                                    deleniti in itaque, exercitationem animi
+                                    incidunt ea!
+                                </strong>
+                            </div>
+                        </div>
+
+                        <div class="rounded-lg bg-white p-8 lg:col-span-3">
+                            <div class="mb-7 flex items-center">
+                                <div
+                                    class="h-10 w-10 overflow-hidden rounded-full border-2"
+                                >
+                                    <img
+                                        src="./assets/images/avatar.jpg"
+                                        alt=""
+                                        class="h-full w-full object-cover"
+                                    />
+                                </div>
+                                <div class="ml-3">
+                                    <h3 class="text-gray-700">
+                                        Jeanette Harmon
+                                    </h3>
+                                    <p class="text-gray-400">
+                                        Verified Graduate
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="mb-7 text-black">
+                                <strong>
+                                    Lorem ipsum dolor sit, amet consectetur
+                                    adipisicing elit. Aliquam nemo ut
+                                </strong>
+                            </div>
+                            <div class="text-gray-400">
+                                <strong class="text-sm"
+                                    >Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit. Laudantium labore saepe
+                                    architecto, culpa optio deleniti doloremque
+                                    et, corporis omnis esse expedita veritatis
+                                    velit quo iure ducimus nesciunt quaerat
+                                    voluptatum? Aut quidem fugiat impedit, odit
+                                </strong>
+                            </div>
+                        </div>
+
+                        <div class="rounded-lg bg-gray-900 p-8 lg:col-span-6">
+                            <div class="mb-7 flex items-center">
+                                <div
+                                    class="h-10 w-10 overflow-hidden rounded-full border-2"
+                                >
+                                    <img
+                                        src="./assets/images/avatar.jpg"
+                                        alt=""
+                                        class="h-full w-full object-cover"
+                                    />
+                                </div>
+                                <div class="ml-3">
+                                    <h3 class="text-white">Patrick Abrams</h3>
+                                    <p class="text-gray-400">
+                                        Verified Graduate
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="mb-7 text-white">
+                                <strong>
+                                    Lorem ipsum dolor sit, amet consectetur
+                                    adipisicing elit. Aliquam nemo ut
+                                    perferendis, expedita temporibus impedit
+                                    quis fugiat, esse, commodi atque dolores
+                                </strong>
+                            </div>
+                            <div class="text-gray-400">
+                                <strong class="text-sm"
+                                    >Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit. Laudantium labore saepe
+                                    architecto, culpa optio deleniti doloremque
+                                    et, corporis omnis esse expedita veritatis
+                                    velit quo iure ducimus nesciunt quaerat
+                                    voluptatum? Aut quidem fugiat impedit, odit
+                                    ad doloremque in architecto mollitia
+                                    perferendis labore eaque numquam nostrum
+                                    ipsum aspernatur laudantium iusto porro?
+                                </strong>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </article>
         </main>
+        <footer class="mt-28"></footer>
     </body>
 </html>
